...
    <string name="tabSetting">タブ設定</string>


    <string name="setting_tab_position_title">タブの位置</string>
    <string name="setting_tab_operation_title">タブの操作方法</string>

    <string name="login_title">ログイン設定</string>


    <!-- 保留リスト -->
    <string name="hold_title">保留リスト</string>
    <string name="hold_list_empty">保留なし</string>

...
